# wsproxy

./: LICENSE  README.md  go.reg  pyproject.toml  windows.py
.github/workflows/: build.yml
packaging/: linux.spec
proxy/: tg_ws_proxy.py
ui/: ctk_tray_ui.py
utils/: update_check.py
